добавил фотки пнг и убрал слово "фото" из таблицы

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -125,16 +125,16 @@ html
                             |мини с крыльцом
                     tr
                         td.catalog__table-img
-                            |Фото
+
                         td.catalog__table-img
-                            a(href="img/item.jpg" data-lightbox="lightbox2")
-                                img(src="img/item.jpg")
+                            a(href="img/mini1.png" data-lightbox="lightbox2")
+                                img(src="img/mini1.png")
                         td.catalog__table-img
-                            a(href="img/item.jpg" data-lightbox="lightbox2")
-                                img(src="img/item.jpg")
+                            a(href="img/mini2.png" data-lightbox="lightbox2")
+                                img(src="img/mini2.png")
                         td.catalog__table-img
-                            a(href="img/item.jpg" data-lightbox="lightbox2")
-                                img(src="img/item.jpg")
+                            a(href="img/mini3.png" data-lightbox="lightbox2")
+                                img(src="img/mini3.png")
                     tr
                         td
                             |Общая длина
@@ -155,7 +155,7 @@ html
                             |200 см
                     tr
                         td
-                            |Диметр
+                            |Диаметр
                         td
                             |200 см
                         td
@@ -240,8 +240,8 @@ html
                         th
                             | мини с крыльцом
                     tr
-                        td
-                            | Фото
+                        td.catalog__table-img
+
                         td
                             img(src="img/item.jpg")
                         td
