--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,7 +48,15 @@ input {
   text-shadow: 1px 1px 1px #000;
   color: #fff;
   text-decoration: none;
+  position: relative;
   background-image: linear-gradient(to bottom, #67BC27, #00703f);
+  &:hover {
+    background-image: linear-gradient(to top, #67BC27, #00703f);
+  }
+  &:active {
+    top: 1px;
+    left: 1px;
+  }
 }
 .main {
   padding-bottom: 80px;
@@ -809,6 +817,85 @@ input {
     font-size: 16px;
     &:hover {
       text-decoration: none;
+    }
+  }
+}
+
+.modal-overlay {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, .5);
+  z-index: 99;
+}
+
+.modal-close {
+  width: 20px;
+  height: 20px;
+  background: url('../images/close.png') center no-repeat;
+  background-size: 100% 100%;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  cursor: pointer;
+}
+
+.modal-window {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 50px auto;
+  text-align: center;
+}
+
+.modal-form {
+  width: 300px;
+}
+.modal {
+  &-thanx {
+    width: 400px;
+    padding: 25px;
+    background: rgba(0,0,0,.7);
+    h2 {
+      line-height: 1.2em;
+      font-size: 30px;
+      margin-bottom: 20px;
+      color: #fff;
+      text-shadow: 1px 1px 1px #000;
+      text-align: center;
+    }
+    p {
+      line-height: 1.2em;
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: #fff;
+      text-shadow: 1px 1px 1px #000;
+      text-align: center;
+    }
+  }
+  &__form {
+    padding: 25px;
+    background: rgba(0,0,0,.7);
+    &-title {
+      line-height: 1.2em;
+      font-size: 30px;
+      margin-bottom: 20px;
+      color: #fff;
+      text-shadow: 1px 1px 1px #000;
+      text-align: center;
+    }
+    .input {
+      display: block;
+      width: 250px;
+      margin: 0 auto 20px auto;
+    }
+    .submit {
+      height: 40px;
+      line-height: 40px;
+      font-size: 16px;
+      width: 250px;
     }
   }
 }
